bugfix accordion collapsed color

--- a/server_geolol/geolol_hub/static/assets/css/style2.css
+++ b/server_geolol/geolol_hub/static/assets/css/style2.css
@@ -155,9 +155,9 @@
 }
 
 .match-victory{
-    background-color: #ECF2FF;
+    background-color: #ECF2FF !important;
 }
 
 .match-defeat{
-    background-color: #FFF1F3;
+    background-color: #FFF1F3 !important;
 }
